--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "skillset"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 description = "Manage and sync AI agent skills across multiple tools"
 license = "MIT"
@@ -8,6 +8,7 @@ license = "MIT"
 [dependencies]
 anyhow = "1.0"
 clap = { version = "4.5", features = ["derive"] }
+dialoguer = "0.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 directories = "5.0"
